pagina contact terminada

--- a/views/contact.html
+++ b/views/contact.html
@@ -1,24 +1,73 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/76d25d6fff.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Contact</title>
-</head>
-<body class="contact">
-    CONTACT INFO - MANAGEMENT | Karen Blanche
-email: info@mysite.com
-phone: 123-456-7890
-BOOKING | Daniel Ku
-email: info@mysite.com
-phone: 123-456-7890
-LABEL | Wix Records, Jake Coldham
-email: info@mysite.com
-phone: 123-456-7890
-PR | That Girl Pr, Sarah Brookstone
-email: info@mysite.com
-phone: 123-456-7890
-</body>
+  </head>
+  <body class="contact">
+    <header id="inicio">
+      <nav class="nav">
+        <ul class="nav-link">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">MUSIC</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
+      </nav>
+      <nav class="nav-icon">
+        <a href=""><i class="fab fa-twitter"></i></a>
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-spotify"></i></a>
+        <a href=""><i class="fab fa-apple"></i></a>
+        <a href=""><i class="fab fa-amazon"></i></a>
+        <a href=""><i class="fab fa-instagram-square"></i></a>
+      </nav>
+    </header>
+    <main>
+      <section>
+        <h1>CONTACT //</h1>
+        <h2>WE ARE HERE</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondres%2C%20Reino%20Unido!5e0!3m2!1ses-419!2sar!4v1623375711044!5m2!1ses-419!2sar"
+          width="100%"
+          height="450"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+        ></iframe>
+      </section>
+      <section>
+          <h2>CONTACT INFO</h2>
+        <article>
+          <h4>MANAGEMENT | Karen Blanche</h4>
+          <p>email: <span>info@mysite.com</span></p>
+          <p>phone: <span>123-456-7890</span></p>
+        </article>
+        <article>
+          <h4>BOOKING | Daniel Ku</h4>
+          <p>email: <span>info@mysite.com</span></p>
+          <p>phone: <span>123-456-7890</span></p>
+        </article>
+        <article>
+          <h4>LABEL | Wix Records, Jake Coldham </h4>
+          <p>email: <span>info@mysite.com</span></p>
+          <p>phone: <span>123-456-7890</span></p>
+        </article>
+        <article>
+          <h4>PR | That Girl Pr, Sarah Brookstone</h4>
+          <p>email: <span>info@mysite.com</span></p>
+          <p>phone: <span>123-456-7890</span></p>
+        </article>
+      </section>
+    </main>
+
+     e
+  </body>
 </html>
