--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -1,3 +1,70 @@
-.contact{
-    background:red;
+/* ======= NAV ========= */
+.contact .nav{
+    text-align: right;
+    padding: 20px 10px;
+    margin-top: 35px;
+    background-color: rgba(255, 255, 255, 0.5);
+}
+.contact .nav li{
+    display: inline-block;
+    border-left: 1px solid black;
+    width: 80px;
+    text-align: center;
+}
+
+.contact .nav li:last-child{
+    border-right: 1px solid black;
+}
+.contact a{
+    color: black;
+    text-transform: none;
+}
+
+
+/* ===== REDES SOCIALES ===== */
+
+
+.contact .nav-icon{
+    text-align: right;
+    margin: 10px 10px 0 0;
+}
+
+/* ==== TITULOS Y PARRAFOS ==== */
+.contact h1{
+    margin-top: 40px;
+    font-size: 50px;
+    
+}
+
+.contact h2{ 
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 24px;
+    margin: 60px 0 15px 0;
+}
+
+.contact h4{
+    font-size: 22px;
+    font-weight: 100;
+    font-family: 'Raleway', sans-serif;
+    color: rgb(4, 134, 134);
+    margin: 20px 0;
+    margin-left: 0;
+}
+
+.contact span{
+    color: rgb(107, 107, 107);
+}
+
+
+
+/* ====== ARTICULOS Y SECCIONES ===== */
+
+.contact main section{
+    margin: 5px;
+}
+
+
+.contact main section article{
+    margin: 20px 0 45px 0 ;
 }
